# simulated-processor

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
answer/: QUESTIONS.md  lock.cpp  main.cpp  test_config.h  thread.cpp  thread_lock.h
os_simulator/: CMakeLists.txt
os_simulator/framework/io/: InternalLogger.cpp  InternalLogger.h
os_simulator/framework/structures/: ListManager.cpp  ListManager.h  MapManager.h  StructureManager.h
os_simulator/framework/threading/: InternalThread.cpp  InternalThread.h  LockManager.cpp  LockManager.h  ThreadManager.cpp  ThreadManager.h  ThreadingConstants.h
os_simulator/includes/: List.h  Lock.h  Lock.student.h  Logger.h  Map.h  Thread.h  Thread.student.h
test/: main.cpp  test_helper.cpp  test_helper.h
